--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,27 @@
-altair @ file:///croot/altair_1743016723624/work
-attrs @ file:///croot/attrs_1734533101012/work
-audioread==3.0.1
-blinker @ file:///croot/blinker_1737448726027/work
-Bottleneck @ file:///croot/bottleneck_1731058641041/work
-Brotli @ file:///croot/brotli-split_1736182456865/work
-CacheControl==0.14.3
-cachetools @ file:///croot/cachetools_1738224668060/work
-certifi @ file:///croot/certifi_1745939216646/work/certifi
-cffi==1.17.1
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click @ file:///croot/click_1744271578095/work
-contourpy @ file:///croot/contourpy_1732540045555/work
-cryptography==45.0.2
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-decorator==5.2.1
+# Core Streamlit and plotting
+streamlit
+matplotlib==3.10.0
+altair # Originally altair @ file:///croot/...
+pydeck # Originally pydeck @ file:///croot/...
+
+# Numerical and Data Handling
+numpy==2.2.5 # Extracted from the .whl URL
+pandas==2.2.3 # Extracted from the .whl URL
+scipy==1.15.3
+scikit-learn==1.6.1
+numexpr # Originally numexpr @ file:///croot/...
+numba==0.61.2
+llvmlite==0.44.0
+mkl-service==2.4.0
+mkl_fft # Originally mkl_fft @ file:///io/...
+mkl_random # Originally mkl_random @ file:///io/...
+Bottleneck # Originally Bottleneck @ file:///croot/...
+narwhals # Originally narwhals @ file:///croot/...
+
+# Google Cloud and Firebase related
 firebase==4.0.1
 firebase-admin==6.8.0
-fonttools @ file:///croot/fonttools_1737039080035/work
 gcloud==0.18.3
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///croot/gitpython_1720455034730/work
 google-api-core==2.25.0rc1
 google-api-python-client==2.170.0
 google-auth==2.40.2
@@ -33,73 +35,74 @@ googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
 httplib2==0.22.0
-idna @ file:///croot/idna_1714398848350/work
-Jinja2 @ file:///croot/jinja2_1741710844255/work
-joblib==1.5.1
-jsonschema @ file:///croot/jsonschema_1728486696720/work
-jsonschema-specifications @ file:///work/perseverance-python-buildout/croot/jsonschema-specifications_1701731664072/work
-jws==0.1.3
-kiwisolver @ file:///croot/kiwisolver_1737039087198/work
-lazy_loader==0.4
-librosa==0.11.0
-llvmlite==0.44.0
-MarkupSafe @ file:///croot/markupsafe_1738584038848/work
-matplotlib==3.10.0
-mkl-service==2.4.0
-mkl_fft @ file:///io/mkl313/mkl_fft_1730824109137/work
-mkl_random @ file:///io/mkl313/mkl_random_1730823916628/work
-msgpack==1.1.0
-narwhals @ file:///croot/narwhals_1742845957875/work
-numba==0.61.2
-numexpr @ file:///croot/numexpr_1730215937391/work
-numpy @ file:///croot/numpy_and_numpy_base_1747238018250/work/dist/numpy-2.2.5-cp312-cp312-linux_x86_64.whl#sha256=5ab22c86c5881c847fa1bb8b572e198c11ea7ebab63d5d24fbc9db9bf24d2365
 oauth2client==4.1.3
-packaging @ file:///croot/packaging_1734472117206/work
-pandas @ file:///croot/pandas_1732735089971/work/dist/pandas-2.2.3-cp312-cp312-linux_x86_64.whl#sha256=57b66702d418720ec8483f7c4ec7c08d41815316ad7ce09d5b7bbc34eefcfdfd
-pillow @ file:///croot/pillow_1744613067434/work
-platformdirs==4.3.8
-pooch==1.8.2
 proto-plus==1.26.1
-protobuf @ file:///croot/protobuf_1742419705443/work/bazel-bin/python/dist/protobuf-5.29.3-cp312-abi3-linux_x86_64.whl#sha256=b288453436273a46653983ade721c0c62cfa5ef6c012b110674c369d25536d88
-pyarrow @ file:///croot/pyarrow_1738229418212/work/python
+protobuf==5.29.3 # Extracted from the .whl URL
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pycparser==2.22
-pycryptodome==3.23.0
-pydeck @ file:///croot/pydeck_1738340956155/work
 PyJWT==2.10.1
-pyparsing==3.2.3
-PyQt6==6.7.1
-PyQt6_sip @ file:///croot/pyqt-split_1744804475988/work/pyqt_sip
+python-jwt==2.0.1
+rsa==4.9.1
 Pyrebase==3.0.27
 Pyrebase4==4.8.0
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
-python-dateutil @ file:///croot/python-dateutil_1716495738603/work
-python-jwt==2.0.1
-pytz @ file:///croot/pytz_1713974312559/work
-PyYAML @ file:///croot/pyyaml_1728657952215/work
-referencing @ file:///work/perseverance-python-buildout/croot/referencing_1701731622327/work
-requests @ file:///croot/requests_1730999120400/work
+
+# General Utilities and Dependencies
+audioread==3.0.1
+blinker # Originally blinker @ file:///croot/...
+Brotli # Originally Brotli @ file:///croot/...
+CacheControl==0.14.3
+cachetools # Originally cachetools @ file:///croot/...
+certifi # Originally certifi @ file:///croot/...
+cffi==1.17.1
+charset-normalizer # Originally charset-normalizer @ file:///croot/...
+click # Originally click @ file:///croot/...
+contourpy # Originally contourpy @ file:///croot/...
+cryptography==45.0.2
+cycler # Originally cycler @ file:///tmp/...
+decorator==5.2.1
+fonttools # Originally fonttools @ file:///croot/...
+gitdb # Originally gitdb @ file:///tmp/...
+GitPython # Originally GitPython @ file:///croot/...
+idna # Originally idna @ file:///croot/...
+Jinja2 # Originally Jinja2 @ file:///croot/...
+joblib==1.5.1
+jsonschema # Originally jsonschema @ file:///croot/...
+jsonschema-specifications # Originally jsonschema-specifications @ file:///work/...
+jws==0.1.3
+kiwisolver # Originally kiwisolver @ file:///croot/...
+lazy_loader==0.4
+librosa==0.11.0
+MarkupSafe # Originally MarkupSafe @ file:///croot/...
+msgpack==1.1.0
+packaging # Originally packaging @ file:///croot/...
+pillow # Originally pillow @ file:///croot/...
+platformdirs==4.3.8
+pooch==1.8.2
+pycparser==2.22
+PyQt6==6.7.1
+PyQt6-sip # Corrected name from PyQt6_sip @ file:///croot/...
+PySocks # Originally PySocks @ file:///work/...
+python-dateutil # Originally python-dateutil @ file:///croot/...
+pytz # Originally pytz @ file:///croot/...
+PyYAML # Originally PyYAML @ file:///croot/...
+referencing # Originally referencing @ file:///work/...
+requests # Originally requests @ file:///croot/...
 requests-toolbelt==0.10.1
-rpds-py @ file:///croot/rpds-py_1736541261634/work
-rsa==4.9.1
-scikit-learn==1.6.1
-scipy==1.15.3
+rpds-py # Originally rpds-py @ file:///croot/...
 setuptools==72.1.0
-sip @ file:///croot/sip_1738856193618/work
-six @ file:///croot/six_1744271502820/work
-smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
+sip # Originally sip @ file:///croot/...
+six # Originally six @ file:///croot/...
+smmap # Originally smmap @ file:///tmp/...
 soundfile==0.13.1
 soxr==0.5.0.post1
-streamlit @ file:///croot/streamlit-split_1747131681240/work/streamlit
-tenacity @ file:///croot/tenacity_1730302500303/work
+tenacity # Originally tenacity @ file:///croot/...
 threadpoolctl==3.6.0
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///croot/tornado_1747918059467/work
-typing_extensions @ file:///croot/typing_extensions_1734714854207/work
-tzdata @ file:///croot/python-tzdata_1746123641790/work
-unicodedata2 @ file:///croot/unicodedata2_1736541023050/work
+toml # Originally toml @ file:///tmp/...
+tornado # Originally tornado @ file:///croot/...
+typing_extensions # Originally typing_extensions @ file:///croot/...
+tzdata # Originally tzdata @ file:///croot/...
+unicodedata2 # Originally unicodedata2 @ file:///croot/...
 uritemplate==4.1.1
 urllib3==1.26.20
-watchdog @ file:///croot/watchdog_1740409902579/work
+watchdog # Originally watchdog @ file:///croot/...
 wheel==0.45.1
