--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,16 @@
-# Core Streamlit and plotting
 streamlit
 matplotlib==3.10.0
-altair # Originally altair @ file:///croot/...
-pydeck # Originally pydeck @ file:///croot/...
-
-# Numerical and Data Handling
-numpy==2.2.5 # Extracted from the .whl URL
-pandas==2.2.3 # Extracted from the .whl URL
+altair
+pydeck
+numpy==2.2.5
+pandas==2.2.3
 scipy==1.15.3
 scikit-learn==1.6.1
-numexpr # Originally numexpr @ file:///croot/...
+numexpr
 numba==0.61.2
 llvmlite==0.44.0
-mkl-service==2.4.0
-mkl_fft # Originally mkl_fft @ file:///io/...
-mkl_random # Originally mkl_random @ file:///io/...
-Bottleneck # Originally Bottleneck @ file:///croot/...
-narwhals # Originally narwhals @ file:///croot/...
+Bottleneck
+narwhals
 
 # Google Cloud and Firebase related
 firebase==4.0.1
@@ -37,7 +31,7 @@ grpcio-status==1.71.0
 httplib2==0.22.0
 oauth2client==4.1.3
 proto-plus==1.26.1
-protobuf==5.29.3 # Extracted from the .whl URL
+protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 PyJWT==2.10.1
@@ -48,61 +42,61 @@ Pyrebase4==4.8.0
 
 # General Utilities and Dependencies
 audioread==3.0.1
-blinker # Originally blinker @ file:///croot/...
-Brotli # Originally Brotli @ file:///croot/...
+blinker
+Brotli
 CacheControl==0.14.3
-cachetools # Originally cachetools @ file:///croot/...
-certifi # Originally certifi @ file:///croot/...
+cachetools
+certifi
 cffi==1.17.1
-charset-normalizer # Originally charset-normalizer @ file:///croot/...
-click # Originally click @ file:///croot/...
-contourpy # Originally contourpy @ file:///croot/...
+charset-normalizer
+click
+contourpy
 cryptography==45.0.2
-cycler # Originally cycler @ file:///tmp/...
+cycler
 decorator==5.2.1
-fonttools # Originally fonttools @ file:///croot/...
-gitdb # Originally gitdb @ file:///tmp/...
-GitPython # Originally GitPython @ file:///croot/...
-idna # Originally idna @ file:///croot/...
-Jinja2 # Originally Jinja2 @ file:///croot/...
+fonttools
+gitdb
+GitPython
+idna
+Jinja2
 joblib==1.5.1
-jsonschema # Originally jsonschema @ file:///croot/...
-jsonschema-specifications # Originally jsonschema-specifications @ file:///work/...
+jsonschema
+jsonschema-specifications
 jws==0.1.3
-kiwisolver # Originally kiwisolver @ file:///croot/...
+kiwisolver
 lazy_loader==0.4
 librosa==0.11.0
-MarkupSafe # Originally MarkupSafe @ file:///croot/...
+MarkupSafe
 msgpack==1.1.0
-packaging # Originally packaging @ file:///croot/...
-pillow # Originally pillow @ file:///croot/...
+packaging
+pillow
 platformdirs==4.3.8
 pooch==1.8.2
 pycparser==2.22
 PyQt6==6.7.1
-PyQt6-sip # Corrected name from PyQt6_sip @ file:///croot/...
-PySocks # Originally PySocks @ file:///work/...
-python-dateutil # Originally python-dateutil @ file:///croot/...
-pytz # Originally pytz @ file:///croot/...
-PyYAML # Originally PyYAML @ file:///croot/...
-referencing # Originally referencing @ file:///work/...
-requests # Originally requests @ file:///croot/...
+PyQt6-sip
+PySocks
+python-dateutil
+pytz
+PyYAML
+referencing
+requests
 requests-toolbelt==0.10.1
-rpds-py # Originally rpds-py @ file:///croot/...
+rpds-py
 setuptools==72.1.0
-sip # Originally sip @ file:///croot/...
-six # Originally six @ file:///croot/...
-smmap # Originally smmap @ file:///tmp/...
+sip
+six
+smmap
 soundfile==0.13.1
 soxr==0.5.0.post1
-tenacity # Originally tenacity @ file:///croot/...
+tenacity
 threadpoolctl==3.6.0
-toml # Originally toml @ file:///tmp/...
-tornado # Originally tornado @ file:///croot/...
-typing_extensions # Originally typing_extensions @ file:///croot/...
-tzdata # Originally tzdata @ file:///croot/...
-unicodedata2 # Originally unicodedata2 @ file:///croot/...
+toml
+tornado
+typing_extensions
+tzdata
+unicodedata2
 uritemplate==4.1.1
 urllib3==1.26.20
-watchdog # Originally watchdog @ file:///croot/...
+watchdog
 wheel==0.45.1
