--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,79 @@
 streamlit
-matplotlib==3.10.0
+matplotlib
 altair
 pydeck
-numpy==2.2.5
-pandas==2.2.3
-scipy==1.15.3
-scikit-learn==1.6.1
+numpy
+pandas
+scipy
+scikit-learn
 numexpr
-numba==0.61.2
-llvmlite==0.44.0
+numba
+llvmlite
 Bottleneck
 narwhals
 
 # Google Cloud and Firebase related
-firebase==4.0.1
-firebase-admin==6.8.0
-gcloud==0.18.3
-google-api-core==2.25.0rc1
-google-api-python-client==2.170.0
-google-auth==2.40.2
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.3
-google-cloud-firestore==2.20.2
-google-cloud-storage==3.1.0
-google-crc32c==1.7.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-grpcio==1.71.0
-grpcio-status==1.71.0
-httplib2==0.22.0
-oauth2client==4.1.3
-proto-plus==1.26.1
-protobuf==5.29.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyJWT==2.10.1
-python-jwt==2.0.1
-rsa==4.9.1
-Pyrebase==3.0.27
-Pyrebase4==4.8.0
+firebase
+firebase-admin
+gcloud
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-cloud-core
+google-cloud-firestore
+google-cloud-storage
+google-crc32c
+google-resumable-media
+googleapis-common-protos
+grpcio
+grpcio-status
+httplib2
+oauth2client
+proto-plus
+protobuf
+pyasn1
+pyasn1_modules
+PyJWT
+python-jwt
+rsa
+Pyrebase
+Pyrebase4
 
 # General Utilities and Dependencies
-audioread==3.0.1
+audioread
 blinker
 Brotli
-CacheControl==0.14.3
+CacheControl
 cachetools
 certifi
-cffi==1.17.1
+cffi
 charset-normalizer
 click
 contourpy
-cryptography==45.0.2
+cryptography
 cycler
-decorator==5.2.1
+decorator
 fonttools
 gitdb
 GitPython
 idna
 Jinja2
-joblib==1.5.1
+joblib
 jsonschema
 jsonschema-specifications
-jws==0.1.3
+jws
 kiwisolver
-lazy_loader==0.4
-librosa==0.11.0
+lazy_loader
+librosa
 MarkupSafe
-msgpack==1.1.0
+msgpack
 packaging
 pillow
-platformdirs==4.3.8
-pooch==1.8.2
-pycparser==2.22
-PyQt6==6.7.1
+platformdirs
+pooch
+pycparser
+PyQt6
 PyQt6-sip
 PySocks
 python-dateutil
@@ -81,22 +81,22 @@ pytz
 PyYAML
 referencing
 requests
-requests-toolbelt==0.10.1
+requests-toolbelt
 rpds-py
-setuptools==72.1.0
+setuptools
 sip
 six
 smmap
-soundfile==0.13.1
-soxr==0.5.0.post1
+soundfile
+soxr
 tenacity
-threadpoolctl==3.6.0
+threadpoolctl
 toml
 tornado
 typing_extensions
 tzdata
 unicodedata2
-uritemplate==4.1.1
-urllib3==1.26.20
+uritemplate
+urllib3
 watchdog
-wheel==0.45.1
+wheel
